The new formats
git-svn-id: https://scm.mmbase.org/mmbase/trunk@10824 91430c5f-d668-0410-9e7d-dd663366dcfd

--- a/applications/media/src/org/mmbase/applications/media/resources/formats_nl.properties
+++ b/applications/media/src/org/mmbase/applications/media/resources/formats_nl.properties
@@ -19,3 +19,12 @@
 18=Windows-media (wmp)
 19=Stukje HTML
 20=Synchronized Multimedia (SMIL)
+22=Windows media (asx)
+23=Windows media (wax)
+24=Windows media (wmv)
+25=Windows media (wm)
+26=Windows media (asx)
+27=Windows media (wmx)
+28=Windows media (wmz)
+29=Windows media (wmd)
+30=Midi
