added country setting to jsp-editors
git-svn-id: https://scm.mmbase.org/mmbase/trunk@11041 91430c5f-d668-0410-9e7d-dd663366dcfd

--- a/html/WEB-INF/classes/org/mmbase/jspeditors/editors_eo.properties
+++ b/html/WEB-INF/classes/org/mmbase/jspeditors/editors_eo.properties
@@ -1,4 +1,4 @@
-# version     $Id: editors_eo.properties,v 1.12 2004-02-20 19:14:22 michiel Exp $
+# version     $Id: editors_eo.properties,v 1.13 2004-06-28 19:41:17 michiel Exp $
 # since       MMBase-1.6
 # translator  Michiel Meeuwissen
 #
@@ -47,12 +47,14 @@ commit_node.redirect=Plusendante al \u0109efa redaktopa\u011Do
 commit_node.commit=Skribante nodon
 
 config.config=Agordo de redaktiloj
+config.liststyle=stilo de listoj
 config.pagesize=pa\u011Da longo
 config.hidesearch=ser\u0109ka\u015Do
 config.stylesheet=stilfolio
 config.language=lingvo (dulitera kodo)
-config.session=sesivariablo por nubo
+config.country=lando (dulitera kodo)
 config.method=salutmetodo
+config.session=sesivariablo por nubo
 
 Node=Nodo
 oftype=de tipo
