--- a/html/WEB-INF/classes/org/mmbase/jspeditors/editors_nl.properties
+++ b/html/WEB-INF/classes/org/mmbase/jspeditors/editors_nl.properties
@@ -1,4 +1,4 @@
-# version     $Id: editors_nl.properties,v 1.15 2004-02-20 19:14:23 michiel Exp $
+# version     $Id: editors_nl.properties,v 1.16 2004-06-28 19:41:17 michiel Exp $
 # since       MMBase-1.6
 # translator  Michiel Meeuwissen
 #
@@ -52,6 +52,7 @@ config.pagesize=paginalengte
 config.hidesearch=verberg zoeken
 config.stylesheet=stylesheet
 config.language=taal (2-letter code)
+config.country=land (2-letter code)
 config.method=login-methode
 config.session=cloud sessievariabele
 
