--- a/speeltuin/jaco/jircs/changes.txt
+++ b/speeltuin/jaco/jircs/changes.txt
@@ -1,5 +1,6 @@
 1.3.2
 
+- Bugfix: Shutdown Jircs properly when running as a servlet.
 - Jircs now logs in to MMBase using a username and password.
 - User builder and fields can be specified in the Jircs configuration.
 
