--- a/contributions/didactor2/src/agenda/config/translations/agenda.txt
+++ b/contributions/didactor2/src/agenda/config/translations/agenda.txt
@@ -42,7 +42,7 @@ workgroup=Werkgroep
 appointment=Afspraak
 starttime=Start
 endtime=Eind
-starttimelessthanendtime=Starttijd moet later liggen dan de eindtijd
+starttimelessthanendtime=Starttijd moet eerder liggen dan de eindtijd
 chatmenuitem=chat
 chatlogmenuitem=chatverslag
 chatlogtitle=Chatverslag
