--- a/contributions/didactor2/src/chat/config/translations/chat.txt
+++ b/contributions/didactor2/src/chat/config/translations/chat.txt
@@ -118,7 +118,7 @@ back=terug
 notallowed_to_remove=Het is niet toegestaan het forum te verwijderen.
 create_forum_name=Forum naam
 create=aanmaken
-create_topic_name=onderwerp naam
+create_topic_name=onderwerp
 sources=Informatiebronnen
 categories=Categorieën
 folderopened=categorie geopend
