configuring filemanagement, translations for editors
git-svn-id: https://scm.mmbase.org/mmbase/trunk@11997 91430c5f-d668-0410-9e7d-dd663366dcfd

--- a/contributions/didactor2/src/education/config/translations/education.txt
+++ b/contributions/didactor2/src/education/config/translations/education.txt
@@ -167,3 +167,7 @@ deleteno=nee
 deletethisfolderyesno=Wilt u deze map inclusief de inhoud echt verwijderen?
 deletefolderitemsyesno=Wilt u de geselecteerde mapitems echt verwijderen?
 deletefolderitems=Verwijder mapitems
+createNewRoles=Maak nieuwe rol
+createNewMetadefinition=Maak nieuwe metadatadefinitie
+createNewMetadatastandard=Maak nieuwe metadatastandaard
+
