--- a/contributions/didactor2/src/education/java/nl/didactor/component/education/EducationMessageBundle_nl_NL.properties
+++ b/contributions/didactor2/src/education/java/nl/didactor/component/education/EducationMessageBundle_nl_NL.properties
@@ -57,7 +57,7 @@ buttontextdone=klaar
 buttontextnext=volgende
 educations=Opleidingen
 createNewEducation=Nieuwe Opleiding Aanmaken
-createNewEducationDiscription=Maak een nieuwe opleiding aan
+createNewEducationDescription=Maak een nieuwe opleiding aan
 treatEducation=Bewerk opleiding
 treat=bewerk
 contentmanagement=contentbeheer
@@ -168,3 +168,20 @@ deletethisfolderyesno=Wilt u deze map inclusief de inhoud echt verwijderen?
 deletefolderitemsyesno=Wilt u de geselecteerde mapitems echt verwijderen?
 deletefolderitems=Verwijder mapitems
 LEARNENVIRONMENTTITLE=Leeromgeving
+editComponents=Componenten beheer
+editComponentsDescription=Ga naar het componenten beheer
+roles=Rollen Beheer
+editPeopleRoleRelEducation=Toevoegen/bewerken rollen
+editPeopleRoleRelEducationDescription=Bewerken rollen
+createNewRoles=Nieuwe rol toevoegen
+createNewRolesDescription=Voeg een nieuwe rol toe aan de opleiding
+treatRoles=Bewerk bestaande rol
+metadata=Metadata
+createNewMetadatastandard=Voeg nieuwe metadata standaard toe
+createNewMetadatastandardDescription=Nieuwe metadata standaard toevoegen
+treatMetastandard=Bewerk bestaande metadata standaard
+createNewMetadefinition=Voeg nieuwe metadefitie toe
+createNewMetadefinitionDescription=Nieuwe metadafinitie toevoegen
+treatMetadefinition=Bewerk bestaande metadefinitie
+editEducation=Bewerk bestaande opleiding
+treatLearnobject=Bewerk bestaand leerobject
