* extra functionaliteit pulldown weg als er niks in staat gedebugged
* wat overbodige debug berichten weg

* pagina worden onthouden in educatie onderdeel

* HTML email wordt "beter" afgehandeld

* mailrules zijn nu volgens std. layout

* wat vertalingen aangepast


git-svn-id: https://scm.mmbase.org/mmbase/trunk@12139 91430c5f-d668-0410-9e7d-dd663366dcfd

--- a/contributions/didactor2/src/email/java/nl/didactor/component/email/EmailMessageBundle_nl_NL.properties
+++ b/contributions/didactor2/src/email/java/nl/didactor/component/email/EmailMessageBundle_nl_NL.properties
@@ -23,7 +23,7 @@ DELETEFOLDER=Verwijder map
 DELETEFOLDERYESNO=Wilt u deze map verwijderen met alle items?
 SELECTONEITEM=Selecteer minimaal een item door het aan te vinken.
 MAILBOXES=Mappen
-WRITENEWEMAIL=Maak nieuwe e-mal
+WRITENEWEMAIL=Maak nieuwe e-mail
 MOVESELECTED=Verplaats geselecteerde
 DELETESELECTED=Verwijder geselecteerde
 EMAILTITLE=e-mail
@@ -46,4 +46,5 @@ FOLDER=Mailbox
 SENDER=Afzender
 SUBJECT=Onderwerp
 MAILRULES=Mail regels
+CREATENEWRULE=Maak nieuwe mail regel
 
