publicly available portfolio's
git-svn-id: https://scm.mmbase.org/mmbase/trunk@12747 91430c5f-d668-0410-9e7d-dd663366dcfd

--- a/contributions/didactor2/src/core/java/nl/didactor/component/core/CoreMessageBundle_nl_NL.properties
+++ b/contributions/didactor2/src/core/java/nl/didactor/component/core/CoreMessageBundle_nl_NL.properties
@@ -28,4 +28,5 @@ NO=nee
 DELETETHISCOMPONENTYESNO=Wilt u dit component verwijderen?
 HOME=start
 PRINT=print
+LISTALLPORTFOLIOS=Bekijk de publieke portfolios
 
