--- a/src/org/mmbase/security/resources/parameters_eo.properties
+++ b/src/org/mmbase/security/resources/parameters_eo.properties
@@ -5,3 +5,11 @@ rank=Rango
 sessionname=Sesi-nomo
 logout=malsaluti
 authenticate=Identig-metodo
+
+# Kelkaj aliaj aferoj rilataj al salutado.
+failed=Sensukcesa saluto. Reprovu.
+failed_rank=Sensukces saluton (tro malalta rango). Reprovu kiel alia uzulo.
+login=Saluto
+logout=Malsaluto
+
+authenticate=Identodonmaniero
