--- a/src/org/mmbase/security/resources/parameters_nl.properties
+++ b/src/org/mmbase/security/resources/parameters_nl.properties
@@ -5,3 +5,11 @@ rank=Rang
 sessionname=Sessienaam
 logout=uitloggen
 authenticate=Authenticatie-type
+
+# Een paar andere dingen die met inloggen te maken hebben
+failed=Login mislukt. Probeer het opnieuw.
+failed_rank=Login mislukt (te lage rang). Probeer het opnieuw met een andere gebruikersnaam.
+login=Login
+logout=Logout
+
+authenticate=Authenticatietype
