*** empty log message ***
git-svn-id: https://scm.mmbase.org/mmbase/trunk@13118 91430c5f-d668-0410-9e7d-dd663366dcfd

--- a/contributions/didactor2/src/education/java/nl/didactor/component/education/EducationMessageBundle_nl_NL.properties
+++ b/contributions/didactor2/src/education/java/nl/didactor/component/education/EducationMessageBundle_nl_NL.properties
@@ -16,7 +16,7 @@ editoroffline=Editor offline
 type=Type
 initials=Initialen
 firstname=Voornaam
-lastname=Achternaam	
+lastname=Achternaam
 email=Email
 address=Adres
 zipcode=Postcode
@@ -176,11 +176,11 @@ editPeopleRoleRelEducationDescription=Bewerken rollen
 createNewRoles=Nieuwe rol toevoegen
 createNewRolesDescription=Voeg een nieuwe rol toe aan de opleiding
 treatRoles=Bewerk bestaande rol
-metadata=Metadata
+metadata=Metadata beheer
 createNewMetadatastandard=Voeg nieuwe metadata standaard toe
 createNewMetadatastandardDescription=Nieuwe metadata standaard toevoegen
 treatMetastandard=Bewerk bestaande metadata standaard
-createNewMetadefinition=Voeg nieuwe metadefitie toe
+createNewMetadefinition=Voeg nieuwe metadefinitie toe
 createNewMetadefinitionDescription=Nieuwe metadafinitie toevoegen
 treatMetadefinition=Bewerk bestaande metadefinitie
 editEducation=Bewerk bestaande opleiding
