--- a/contributions/didactor2/src/core/java/nl/didactor/component/core/CoreMessageBundle_nl_NL.properties
+++ b/contributions/didactor2/src/core/java/nl/didactor/component/core/CoreMessageBundle_nl_NL.properties
@@ -17,7 +17,7 @@ MAYFORWARDEMAIL=Stuur email door naar eigen emailadres
 COMPONENT=Component
 PROVIDER=Aanbieder:
 EDUCATION=Opleiding:
-NEWCOMPONENT=nieuw component
+NEWCOMPONENT=nieuwe component
 CLASSNAME=Klasnaam
 EDITCOMPONENT=Bewerk component
 CREATE=aanmaken
@@ -25,7 +25,7 @@ UPDATE=update
 DELETECOMPONENT=Verwijder component
 YES=ja
 NO=nee
-DELETETHISCOMPONENTYESNO=Wilt u dit component verwijderen?
+DELETETHISCOMPONENTYESNO=Wilt u deze component verwijderen?
 HOME=start
 PRINT=print
 LISTALLPORTFOLIOS=Bekijk de publieke portfolios
