[added] Competence Types Matrix by AZ
git-svn-id: https://scm.mmbase.org/mmbase/trunk@13722 91430c5f-d668-0410-9e7d-dd663366dcfd

--- a/contributions/didactor2/src/competence/java/nl/didactor/component/competence/CompetenceMessageBundle_en.properties
+++ b/contributions/didactor2/src/competence/java/nl/didactor/component/competence/CompetenceMessageBundle_en.properties
@@ -1,22 +1,36 @@
-CompetenceMatrixAddNewCoreTask=Press_the_cell_to_add_new_core_task
-CompetenceMatrixAddNewCoreAssignment=Press the cell to add new core assignment
+CompetenceMatrixAddNewCoreTask=(*)
+CompetenceMatrixAddNewCoreAssignment=(*)
+CompetenceMatrixAddNewExplanation=(*) Click on the cells following the competence to attach or delete core tasks and core assignments
 
 CompetenceMatrixCompetences=Competences
-CompetenceMatrixCoreTasks=CoreTasks
-CompetenceMatrixCoreAssignments=CoreAssignments
+CompetenceMatrixCoreTasks=Core Tasks
+CompetenceMatrixCoreAssignments=Core Assignments
 CompetenceMatrixRatings=Ratings
+CompetenceMatrixProfile=The {$$$} is able to properly carry out
+
+CompetenceTypesMatrixSearchResultsItems=COMPETENCES({$$$} items)
+CompetenceTypesMatrixSearchResultsItemsDescription=???
+CompetenceTypesMatrixSearchResultsTitle=Search results:
+CompetenceTypesMatrixSearchTimeToday=today
+CompetenceTypesMatrixSearchTimeDay=1 day
+CompetenceTypesMatrixSearchTimeWeek=7 week
+CompetenceTypesMatrixSearchTimeMonth=1 month
+CompetenceTypesMatrixSearchTimeYear=1 year
+CompetenceTypesMatrixSearchTimeAll=all
+CompetenceTypesMatrixSearchTime=( Time )
+CompetenceTypesMatrixSearchTerms=( Terms )
 
 CompetenceTreeRoot=Competence
-CompetenceTreeRootDescription=
+CompetenceTreeRootDescription=Edit this competence
 CompetenceTreeItemCompetences=Competences
-CompetenceTreeItemCompetencesDescription=
-CompetenceTreeItemPreGrades=PreGrades
-CompetenceTreeItemPreGradesDescription=
-CompetenceTreeItemPostGrades=PostGrades
-CompetenceTreeItemPostGradesDescription=
+CompetenceTreeItemCompetencesDescription=Edit this competences
+CompetenceTreeItemPreGrades=Preassesments
+CompetenceTreeItemPreGradesDescription=Edit this Preassesment
+CompetenceTreeItemPostGrades=Postassesments
+CompetenceTreeItemPostGradesDescription=Edit this Postassesment
 CompetenceTreeItemProfiles=Profiles
-CompetenceTreeItemProfilesDescription=
+CompetenceTreeItemProfilesDescription=Edit profiles
 CompetenceTreeItemPEP=P.E.P.
-CompetenceTreeItemPEPDescription=
-CompetenceTreeItemCreateNewProfile=Create new profile
-CompetenceTreeItemCreateNewProfileDescription=
+CompetenceTreeItemPEPDescription=View Personal Education Plan
+CompetenceTreeItemCreateNewProfile=New profile
+CompetenceTreeItemCreateNewProfileDescription=Create new profile
