--- a/contributions/didactor2/src/competence/java/nl/didactor/component/competence/CompetenceMessageBundle_nl.properties
+++ b/contributions/didactor2/src/competence/java/nl/didactor/component/competence/CompetenceMessageBundle_nl.properties
@@ -1,22 +1,36 @@
-CompetenceMatrixAddNewCoreTask=aaaaaaaaaaaaa
-CompetenceMatrixAddNewCoreAssignment=bbbbbbbbbbbb
+CompetenceMatrixAddNewCoreTask=(*)
+CompetenceMatrixAddNewCoreAssignment=(*)
+CompetenceMatrixAddNewExplanation=(*) Klik op de cellen achter de competentie om een kerntaak of kernopgave toe te voegen of te verwijderen
 
 CompetenceMatrixCompetences=Competenties
-CompetenceMatrixCoreTasks=Kerntaak
-CompetenceMatrixCoreAssignments=Kernopgave
-CompetenceMatrixRatings=Succes criteria
+CompetenceMatrixCoreTasks=Kerntaken
+CompetenceMatrixCoreAssignments=Kernopdrachten
+CompetenceMatrixRatings=Succesfactoren
+CompetenceMatrixProfile=De {$$$} is in staat om op adequate wijze
 
-CompetenceTreeRoot=Competentie
-CompetenceTreeRootDescription=aaa
+CompetenceTypesMatrixSearchResultsItems=COMPETENTIES({$$$} items)
+CompetenceTypesMatrixSearchResultsItemsDescription=Dit zijn de items die u kan wijzigen.
+CompetenceTypesMatrixSearchResultsTitle=Zoek Intakes:
+CompetenceTypesMatrixSearchTimeToday=vandaag
+CompetenceTypesMatrixSearchTimeDay=1 dag
+CompetenceTypesMatrixSearchTimeWeek=7 dagen
+CompetenceTypesMatrixSearchTimeMonth=1 maand
+CompetenceTypesMatrixSearchTimeYear=1 jaar
+CompetenceTypesMatrixSearchTimeAll=alles
+CompetenceTypesMatrixSearchTime=( Leeftijd )
+CompetenceTypesMatrixSearchTerms=( Termen )
+
+CompetenceTreeRoot=Competenties
+CompetenceTreeRootDescription=Bewerk deze competentie
 CompetenceTreeItemCompetences=Competenties
-CompetenceTreeItemCompetencesDescription=bbb
-CompetenceTreeItemPreGrades=Preassessments
-CompetenceTreeItemPreGradesDescription=ccc
-CompetenceTreeItemPostGrades=Postassessments
-CompetenceTreeItemPostGradesDescription=ddd
+CompetenceTreeItemCompetencesDescription=Bewerk deze competenties
+CompetenceTreeItemPreGrades=Preassesments
+CompetenceTreeItemPreGradesDescription=Bewerk deze preassesments
+CompetenceTreeItemPostGrades=Postassesments
+CompetenceTreeItemPostGradesDescription=Bewerk deze postassesments
 CompetenceTreeItemProfiles=Profielen
-CompetenceTreeItemProfilesDescription=eee
+CompetenceTreeItemProfilesDescription=Bewerk profielen
 CompetenceTreeItemPEP=P.O.P.
-CompetenceTreeItemPEPDescription=fff
-CompetenceTreeItemCreateNewProfile=cccccccccccc
-CompetenceTreeItemCreateNewProfileDescription=ggg
+CompetenceTreeItemPEPDescription=Bekijk Persoonlijke Opleidings Plan
+CompetenceTreeItemCreateNewProfile=Nieuw profiel
+CompetenceTreeItemCreateNewProfileDescription=Maak een nieuw profiel aan
