[add] Competence Types Matrix addons
by AZ


git-svn-id: https://scm.mmbase.org/mmbase/trunk@13725 91430c5f-d668-0410-9e7d-dd663366dcfd

--- a/contributions/didactor2/src/competence/java/nl/didactor/component/competence/CompetenceMessageBundle_en.properties
+++ b/contributions/didactor2/src/competence/java/nl/didactor/component/competence/CompetenceMessageBundle_en.properties
@@ -19,6 +19,9 @@ CompetenceTypesMatrixSearchTimeYear=1 year
 CompetenceTypesMatrixSearchTimeAll=all
 CompetenceTypesMatrixSearchTime=( Time )
 CompetenceTypesMatrixSearchTerms=( Terms )
+CompetenceTypesMatrixSearchByName=Name contains
+CompetenceTypesMatrixSearchByNumber=Number is
+CompetenceTypesMatrixSearchByOwner=Owner is
 
 CompetenceTreeRoot=Competence
 CompetenceTreeRootDescription=Edit this competence
