--- a/contributions/didactor2/src/competence/java/nl/didactor/component/competence/CompetenceMessageBundle_nl.properties
+++ b/contributions/didactor2/src/competence/java/nl/didactor/component/competence/CompetenceMessageBundle_nl.properties
@@ -19,6 +19,9 @@ CompetenceTypesMatrixSearchTimeYear=1 jaar
 CompetenceTypesMatrixSearchTimeAll=alles
 CompetenceTypesMatrixSearchTime=( Leeftijd )
 CompetenceTypesMatrixSearchTerms=( Termen )
+CompetenceTypesMatrixSearchByName=Titel bevat
+CompetenceTypesMatrixSearchByNumber=Nummer is
+CompetenceTypesMatrixSearchByOwner=Eigenaar is
 
 CompetenceTreeRoot=Competenties
 CompetenceTreeRootDescription=Bewerk deze competentie
