*** empty log message ***
git-svn-id: https://scm.mmbase.org/mmbase/trunk@13756 91430c5f-d668-0410-9e7d-dd663366dcfd

--- a/contributions/didactor2/src/workspace/java/nl/didactor/component/workspace/WorkspaceMessageBundle_nl_NL.properties
+++ b/contributions/didactor2/src/workspace/java/nl/didactor/component/workspace/WorkspaceMessageBundle_nl_NL.properties
@@ -43,4 +43,6 @@ SAVE=opslaan
 REACTIONS=Reacties
 REACT=reageer
 PORTFOLIO=Portfolio
+CHOOSE_A_LETTER_OR_SEARCH=Bekijk op alfabet of zoek
+SEARCH=Zoek
 
