[addon] Core tasks Core assignments are now in the education tree
by AZ


git-svn-id: https://scm.mmbase.org/mmbase/trunk@13765 91430c5f-d668-0410-9e7d-dd663366dcfd

--- a/contributions/didactor2/src/competence/java/nl/didactor/component/competence/CompetenceMessageBundle_en.properties
+++ b/contributions/didactor2/src/competence/java/nl/didactor/component/competence/CompetenceMessageBundle_en.properties
@@ -27,6 +27,10 @@ CompetenceTreeRoot=Competence
 CompetenceTreeRootDescription=Edit this competence
 CompetenceTreeItemCompetences=Competences
 CompetenceTreeItemCompetencesDescription=Edit this competences
+CompetenceTreeItemCoreTasks=Core tasks
+CompetenceTreeItemCoreTasksDescription=Edit this Core task
+CompetenceTreeItemCoreAssignments=Core assignments
+CompetenceTreeItemCoreAssignmentsDescription=Edit this Core assignment
 CompetenceTreeItemPreGrades=Preassesments
 CompetenceTreeItemPreGradesDescription=Edit this Preassesment
 CompetenceTreeItemPostGrades=Postassesments
