--- a/contributions/didactor2/src/competence/java/nl/didactor/component/competence/CompetenceMessageBundle_nl.properties
+++ b/contributions/didactor2/src/competence/java/nl/didactor/component/competence/CompetenceMessageBundle_nl.properties
@@ -27,6 +27,10 @@ CompetenceTreeRoot=Competenties
 CompetenceTreeRootDescription=Bewerk deze competentie
 CompetenceTreeItemCompetences=Competenties
 CompetenceTreeItemCompetencesDescription=Bewerk deze competenties
+CompetenceTreeItemCoreTasks=Kerntaken
+CompetenceTreeItemCoreTasksDescription=Bewerk deze kerntaken
+CompetenceTreeItemCoreAssignments=Kernopgaven
+CompetenceTreeItemCoreAssignmentsDescription=Bewerk deze kernopgaven
 CompetenceTreeItemPreGrades=Preassesments
 CompetenceTreeItemPreGradesDescription=Bewerk deze preassesments
 CompetenceTreeItemPostGrades=Postassesments
