--- a/speeltuin/mihxil/kupu/README
+++ b/speeltuin/mihxil/kupu/README
@@ -1,2 +1,7 @@
 svn co http://codespeak.net/svn/kupu/trunk/kupu
 and then copy the contents of this directory over it.
+
+Furthermore you need: Tomcat 5, MMBase 1.8 and jakarta's i18n taglib.
+Compile-time there are dependencies on xsltproc, msgfmt and msgen.
+
+
