added a few properties for convienience (may move them later)
git-svn-id: https://scm.mmbase.org/mmbase/trunk@13870 91430c5f-d668-0410-9e7d-dd663366dcfd

--- a/html/WEB-INF/classes/org/mmbase/jspeditors/editors_nl.properties
+++ b/html/WEB-INF/classes/org/mmbase/jspeditors/editors_nl.properties
@@ -1,4 +1,4 @@
-# version     $Id: editors_nl.properties,v 1.16 2004-06-28 19:41:17 michiel Exp $
+# version     $Id: editors_nl.properties,v 1.17 2005-06-06 08:22:50 michiel Exp $
 # since       MMBase-1.6
 # translator  Michiel Meeuwissen
 #
@@ -71,5 +71,7 @@ ok=ok
 search=zoek
 false=nee
 true=ja
+default=default
 
-
+richtext.editor=Richtext-editor 
+richtext.nonode=Geen node geladen
