--- a/html/WEB-INF/classes/org/mmbase/jspeditors/editors_eo.properties
+++ b/html/WEB-INF/classes/org/mmbase/jspeditors/editors_eo.properties
@@ -1,4 +1,4 @@
-# version     $Id: editors_eo.properties,v 1.13 2004-06-28 19:41:17 michiel Exp $
+# version     $Id: editors_eo.properties,v 1.14 2005-06-06 08:22:50 michiel Exp $
 # since       MMBase-1.6
 # translator  Michiel Meeuwissen
 #
@@ -71,3 +71,7 @@ ok=o kej
 search=ser\u0109u
 false=ne
 true=jes
+default=defa\u016dlto
+
+richtext.editor=Ri\u0109a redaktilo
+richtext.nonode=Neniu nodo en\u015Dutita
