--- a/contributions/didactor2/src/pop/java/nl/didactor/component/pop/PopMessageBundle_en.properties
+++ b/contributions/didactor2/src/pop/java/nl/didactor/component/pop/PopMessageBundle_en.properties
@@ -20,6 +20,7 @@ POP=PEP
 POPfull=Personal education plan
 Competence=Competence
 Competencies=Competencies
+Description=Description
 Score=Score
 Progressmonitor=Progressmonitor
 Portfolio=Portfolio
@@ -41,7 +42,6 @@ PortfolioNotContainChatlog=Your development portfolio does not contain chatlogs.
 
 
 TodoTask=Task
-TodoDescription=Description
 TodoDuration=Duration
 
 TodoHour=hour
