--- a/contributions/didactor2/src/education/java/nl/didactor/component/education/EducationMessageBundle_nl_NL.properties
+++ b/contributions/didactor2/src/education/java/nl/didactor/component/education/EducationMessageBundle_nl_NL.properties
@@ -187,3 +187,5 @@ editEducation=Bewerk bestaande opleiding
 treatLearnobject=Bewerk bestaand leerobject
 filemanagement=Filemanagement
 educationMenuWorkgroups=Werkgroepen
+workgroups=werkgroepen
+
