--- a/contributions/didactor2/src/education/java/nl/didactor/component/education/EducationMessageBundle_nl_NL.properties
+++ b/contributions/didactor2/src/education/java/nl/didactor/component/education/EducationMessageBundle_nl_NL.properties
@@ -187,4 +187,5 @@ editEducation=Bewerk bestaande opleiding
 treatLearnobject=Bewerk bestaand leerobject
 filemanagement=Filemanagement
 workgroups=werkgroepen
+isboimport=ISBO Import
 
