--- a/contributions/didactor2/src/workspace/java/nl/didactor/component/workspace/WorkspaceMessageBundle_nl_NL.properties
+++ b/contributions/didactor2/src/workspace/java/nl/didactor/component/workspace/WorkspaceMessageBundle_nl_NL.properties
@@ -1,4 +1,5 @@
 MYDOCUMENTS=Mijn documenten
+ADDCONTACTS=Leden bewerken
 SHAREDDOCUMENTS=Gedeelde documenten
 FOLDERS=Mappen
 CREATEFOLDER=Aanmaken map
@@ -35,6 +36,7 @@ MYDOCUMENTSMENUITEM=mijn documenten
 SHAREDDOCUMENTSMENUITEM=klas documenten
 WORKGROUPDOCUMENTSMENUITEM=werkgroep documenten
 WORKGROUPDOCUMENTS=werkgroep documenten
+PROJECTGROUPDOCUMENTS=projectgroep documenten
 DELETEYES=ja
 DELETENO=nee
 DELETETHISFOLDERYESNO=Wilt u deze map inclusief de inhoud echt verwijderen?
