--- a/contributions/didactor2/src/education/config/translations/education.txt
+++ b/contributions/didactor2/src/education/config/translations/education.txt
@@ -16,7 +16,7 @@ editoroffline=Editor offline
 type=Type
 initials=Initialen
 firstname=Voornaam
-lastname=Achternaam	
+lastname=Achternaam
 email=Email
 address=Adres
 zipcode=Postcode
@@ -55,6 +55,7 @@ education=Opleiding
 testwithoutquestions=Bij deze test zijn geen vragen vastgelegd.
 buttontextdone=klaar
 buttontextnext=volgende
+buttontextprev=vorige
 educations=Opleidingen
 createNewEducation=Nieuwe Opleiding Aanmaken
 createNewEducationDiscription=Maak een nieuwe opleiding aan
