use new translation engine
git-svn-id: https://scm.mmbase.org/mmbase/trunk@15722 91430c5f-d668-0410-9e7d-dd663366dcfd

--- a/contributions/didactor2/src/education/config/translations/education.nl.properties
+++ b/contributions/didactor2/src/education/config/translations/education.nl.properties
@@ -16,7 +16,7 @@ editoroffline=Editor offline
 type=Type
 initials=Initialen
 firstname=Voornaam
-lastname=Achternaam	
+lastname=Achternaam
 email=Email
 address=Adres
 zipcode=Postcode
@@ -56,16 +56,16 @@ testwithoutquestions=Bij deze test zijn geen vragen vastgelegd.
 buttontextdone=klaar
 buttontextnext=volgende
 educations=Opleidingen
-createNewEducation=Nieuwe Opleiding Aanmaken
-createNewEducationDiscription=Maak een nieuwe opleiding aan
-treatEducation=Bewerk opleiding
+createneweducation=Nieuwe Opleiding Aanmaken
+createneweducationdescription=Maak een nieuwe opleiding aan
+treateducation=Bewerk opleiding
 treat=bewerk
 contentmanagement=contentbeheer
 coursemanagement=cursusbeheer
 administrator=beheerder
-toEmpty=Voer een ontvanger in voor dit email bericht!
-subjectEmpty=Voer een onderwerp in voor dit email bericht!
-bodyEmpty=Voer de tekst van het bericht in!
+toempty=Voer een ontvanger in voor dit email bericht!
+subjectempty=Voer een onderwerp in voor dit email bericht!
+bodyempty=Voer de tekst van het bericht in!
 writemessage=schrijf bericht
 to=aan
 cc=cc
@@ -77,7 +77,7 @@ back=terug
 administrators=beheerders
 teachers=docenten
 students=studenten
-useThese=gebruik deze
+usethese=gebruik deze
 hide=verberg
 name=naam
 emailtitle=E-mail
@@ -167,7 +167,25 @@ deleteno=nee
 deletethisfolderyesno=Wilt u deze map inclusief de inhoud echt verwijderen?
 deletefolderitemsyesno=Wilt u de geselecteerde mapitems echt verwijderen?
 deletefolderitems=Verwijder mapitems
-createNewRoles=Maak nieuwe rol
-createNewMetadefinition=Maak nieuwe metadatadefinitie
-createNewMetadatastandard=Maak nieuwe metadatastandaard
+learnenvironmenttitle=Leeromgeving
+editcomponents=Componenten beheer
+editcomponentsdescription=Ga naar het componenten beheer
+roles=Rollen Beheer
+editpeoplerolereleducation=Toevoegen/bewerken rollen
+editpeoplerolereleducationdescription=Bewerken rollen
+createnewroles=Nieuwe rol toevoegen
+createnewrolesdescription=Voeg een nieuwe rol toe aan de opleiding
+treatroles=Bewerk bestaande rol
+metadata=Metadata beheer
+createnewmetadatastandard=Voeg nieuwe metadata standaard toe
+createnewmetadatastandarddescription=Nieuwe metadata standaard toevoegen
+treatmetastandard=Bewerk bestaande metadata standaard
+createnewmetadefinition=Voeg nieuwe metadefinitie toe
+createnewmetadefinitiondescription=Nieuwe metadafinitie toevoegen
+treatmetadefinition=Bewerk bestaande metadefinitie
+editeducation=Bewerk bestaande opleiding
+treatlearnobject=Bewerk bestaand leerobject
+filemanagement=Filemanagement
+workgroups=werkgroepen
+isboimport=ISBO Import
 
