--- a/contributions/didactor2/src/workspace/config/translations/workspace.nl.properties
+++ b/contributions/didactor2/src/workspace/config/translations/workspace.nl.properties
@@ -1,4 +1,5 @@
 mydocuments=Mijn documenten
+addcontacts=Leden bewerken
 shareddocuments=Gedeelde documenten
 folders=Mappen
 createfolder=Aanmaken map
@@ -32,9 +33,30 @@ folderitemtypechatlog=chatverslag
 type=Type
 foldernamenotempty=Geef een naam voor de map
 mydocumentsmenuitem=mijn documenten
-shareddocumentsmenuitem=gedeelde documenten
+shareddocumentsmenuitem=klas documenten
+workgroupdocumentsmenuitem=werkgroep documenten
+workgroupdocuments=werkgroep documenten
+projectgroupdocuments=projectgroep documenten
 deleteyes=ja
 deleteno=nee
 deletethisfolderyesno=Wilt u deze map inclusief de inhoud echt verwijderen?
 deletefolderitemsyesno=Wilt u de geselecteerde mapitems echt verwijderen?
 deletefolderitems=Verwijder mapitems
+addurl=URL toevoegen
+save=opslaan
+reactions=Reacties
+react=reageer
+portfolio=Portfolio
+choose_a_letter_or_search=Bekijk op alfabet of zoek
+search=Zoek
+projectgroups=projectgroepen
+projectgroupnamenotemtpy=Naam mag niet leeg zijn
+projectnamenotemtpy=Naam mag niet leeg zijn
+deleteprojectgroup=Projectgroep verwijderen
+deleteprojectgroupyesno=Deze projectgroep verwijderen?
+createprojectgroup=Projectgroep aanmaken
+projectnamenotempty=Naam mag niet leeg zijn
+deletecontactsyesno=Deze leden verwijderen?
+deletecontacts=Leden verwijderen
+
+
