--- a/contributions/didactor2/src/versioning/config/translations/versioning.nl.properties
+++ b/contributions/didactor2/src/versioning/config/translations/versioning.nl.properties
@@ -4,3 +4,5 @@ versioningnote=Let op
 versioningnotetext=De inhoud van deze versie overschrijft de huidige inhoud!
 versioningdeletewarning=Weet u zeker dat u deze gearchiveerde versie wilt verwijderen?
 versioningrestorewarning=Weet u zeker dat u de gegevens uit deze versie terug wilt plaatsen?
+created_by=Aangemaakt door
+date=Datum
