--- a/contributions/didactor2/src/versioning/config/translations/versioning.properties
+++ b/contributions/didactor2/src/versioning/config/translations/versioning.properties
@@ -4,3 +4,5 @@ versioningnote=Note
 versioningnotetext=The content of this version will overwrite the current content!
 versioningdeletewarning=Are you sure that you wish to remove this archived version?
 versioningrestorewarning=Are you sure you wish to restore this version?
+created_by=Created by
+date=Date
