--- a/contributions/didactor2/src/scorm/config/translations/scorm.nl.properties
+++ b/contributions/didactor2/src/scorm/config/translations/scorm.nl.properties
@@ -12,3 +12,4 @@ scormpackagelistimportlink=importeer
 scormpackagelistpublishlink=publiseer
 scormpackagelistimported=geimporteerd
 scormpackagelistuploaded=geupload
+filemanagementdeleteprompt=Weet u zeker dat u dit bestand wilt verwijderen?
