--- a/contributions/didactor2/src/scorm/config/translations/scorm.properties
+++ b/contributions/didactor2/src/scorm/config/translations/scorm.properties
@@ -12,3 +12,5 @@ scormpackagelistimportlink=import
 scormpackagelistpublishlink=publish
 scormpackagelistimported=imported
 scormpackagelistuploaded=uploaded
+filemanagementdeleteprompt=Are you sure you want to delete this file?
+
