--- a/contributions/didactor2/src/progress/config/translations/progress.properties
+++ b/contributions/didactor2/src/progress/config/translations/progress.properties
@@ -12,7 +12,7 @@ perccompleted=Percentage completed:
 educationplan=Education plan:
 testsof=Tests of user
 learnblock=Learnblock
-test=Test
+tests=Tests
 questions=Questions
 score=Score
 needed=Needed
