--- a/contributions/didactor2/src/progress/config/translations/progress.nl.properties
+++ b/contributions/didactor2/src/progress/config/translations/progress.nl.properties
@@ -12,7 +12,7 @@ perccompleted=Percentage doorlopen:
 educationplan=Opleidings traject:
 testsof=Toetsen van
 learnblock=Leerblok
-test=Toets
+tests=Toetsen
 questions=Vragen
 score=Score
 needed=Nodig
