--- a/contributions/didactor2/src/agenda/config/translations/agenda.nl.properties
+++ b/contributions/didactor2/src/agenda/config/translations/agenda.nl.properties
@@ -23,4 +23,29 @@ deleteall=Hele reeks verwijderen
 deleteone=Alleen geselecteerde datum
 seriesfound=Een of meer geselecteerde berichten is onderdeel van een reeks. Wilt u de hele reeks of een enkel bericht verwijderen?
 agenda_of=Agenda van
-
+ok=Ok
+invitationstatus=Status
+addinvitation=Create an invitation
+recipient=Ontvanger
+date=Datum
+appointments=Afspraken
+viewcurrentagenda=Bekijk agenda van vandaag
+type=Type
+name=Naam
+status=Status
+sentto=Verstuurd aan
+recievedfrom=Ontvangen van
+accepted=Geaccepteerd
+declined=Geweigerd
+pending=Wacht op antwoord
+newappointments=U heeft nieuwe afspraken
+listappointments=Bekijk afspraken
+sender=Afzender
+recipients=Ontvanger
+sunday=zo
+monday=ma
+tuesday=di
+wednesday=wo
+thursday=do
+friday=vr
+saturday=za
