--- a/contributions/didactor2/src/agenda/config/translations/agenda.properties
+++ b/contributions/didactor2/src/agenda/config/translations/agenda.properties
@@ -19,10 +19,33 @@ deleteappointment=Delete appointment
 deleteselectedappointmentsyesno=Delete selected appointments?
 yes=Yes
 no=No
-
 deleteall=Delete whole series
 deleteone=Delete only selected date
 seriesfound=One or more selected items is part of a series, do you want to delete the whole series, or just the items on the selected date?
-
 agenda_of=Agenda of
-
+ok=Ok
+invitationstatus=Status
+addinvitation=Create an invitation
+recipient=Recipient
+date=Date
+appointments=Appointments
+viewcurrentagenda=View todays agenda
+type=Type
+name=Name
+status=Status
+sentto=Sent to
+recievedfrom=Received from
+accepted=Accepted
+declined=Declined
+pending=Pending
+newappointments=You have new appointments
+listappointments=List appointments
+sender=Sender
+recipients=Recipient
+sunday=su
+monday=mo
+tuesday=tu
+wednesday=we
+thursday=th
+friday=fr
+saturday=sa
