more translation changes
git-svn-id: https://scm.mmbase.org/mmbase/trunk@15740 91430c5f-d668-0410-9e7d-dd663366dcfd

--- a/contributions/didactor2/src/forum/config/translations/forum.properties
+++ b/contributions/didactor2/src/forum/config/translations/forum.properties
@@ -1,14 +1,20 @@
-back=Terug
-closeforum=sluit forum voor studenten
-create=aanmaken
-create_forum_name=Forum naam
-create_topic_name=Onderwerp naam
+back=Back
+closeforum=close forum for students
+create=create
+create_forum_name=Forum name
+create_topic_name=Topic name
 forum=Forum
-message=Bericht
-notallowed_to_remove=Het is niet toegestaan het forum te verwijderen.
-openforum=open forum voor studenten
-post=plaats
-remove=verwijder
-remove_thread=verwijder alle
-title=Titel
+message=Message
+notallowed_to_remove=It is not allowed to remove the forum
+openforum=open forum for students
+post=post
+remove=remove
+remove_thread=remove all
+title=Title
 thread=Thread
+newtopic=New Topic
+newforum=New Forum
+topic=Topic
+number=Number
+latest=Latest
+by_user=by
