--- a/contributions/didactor2/src/forum/config/translations/forum.nl.properties
+++ b/contributions/didactor2/src/forum/config/translations/forum.nl.properties
@@ -1,14 +1,20 @@
-back=Back
-closeforum=close forum for students
-create=create
-create_forum_name=Forum name
-create_topic_name=Topic name
+back=Terug
+closeforum=sluit forum voor studenten
+create=aanmaken
+create_forum_name=Forum naam
+create_topic_name=Onderwerp naam
 forum=Forum
-message=Message
-notallowed_to_remove=It is not allowed to remove the forum
-openforum=open forum for students
-post=post
-remove=remove
-remove_thread=remove all
-title=Title
+message=Bericht
+notallowed_to_remove=Het is niet toegestaan het forum te verwijderen.
+openforum=open forum voor studenten
+post=plaats
+remove=verwijder
+remove_thread=verwijder alle
+title=Titel
 thread=Thread
+newtopic=Nieuw onderwerp
+newforum=Nieuw forum
+topic=Onderwerp
+number=Aantatl
+latest=Laatste
+by_user=door
