--- a/contributions/didactor2/src/portfolio/config/translations/portfolio.nl.properties
+++ b/contributions/didactor2/src/portfolio/config/translations/portfolio.nl.properties
@@ -3,5 +3,43 @@ developmentportfolio=Ontwikkelingsgericht portfolio
 assessmentportfolio=Assessment portfolio
 showcaseportfolio=Showcase portfolio
 save=Opslaan
-cancel=Annuleren
-
+addchatlog=Chatverslag plaatsen
+adddocument=Document plaatsen
+addsource=Informatiebron plaatsen
+back=terug
+create=aanmaken
+createfolder=Aanmaken map
+date=Datum
+deletefolder=Verwijderen map
+deletefolderitems=Verwijder mapitems
+deletefolderitemsyesno=Wilt u de geselecteerde mapitems echt verwijderen?
+deleteno=nee
+deleteselected=Verwijder geselecteerde
+deletethisfolderyesno=Wilt u deze map inclusief de inhoud echt verwijderen?
+deleteyes=ja
+description=Beschrijving
+filesto=bestand(en) naar:
+folderclosed=map gesloten
+folderitemtypechatlog=chatverslag
+folderitemtypedocument=document
+folderitemtypepage=pagina
+folderitemtypeurl=informatiebron
+foldernamenotempty=Geef een naam voor de map
+folderopened=map geopend
+folders=Mappen
+move=verplaatsen
+moveitems=Verplaatsen items
+moveselected=Verplaats geselecteerde
+movesingle=Verplaats
+mydocuments=Mijn documenten
+openitem=Open item
+rename=hernoemen
+renamefolder=Hernoemen map
+shareddocuments=Gedeelde documenten
+title=Titel
+type=Type
+addurl=URL toevoegen
+reactions=Reacties
+choose_a_letter_or_search=Kies een letter of zoek
+react=Reageer
+search=Zoek
